--- a/rest-service-HW/rest-service-viewData.html
+++ b/rest-service-HW/rest-service-viewData.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+
+    <!-- jQuery CDN -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <!-- <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.8.0.js"></script> -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
+
+    <script src="getBooksInfo.js"></script>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,63 +21,133 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>view data</title>
+
+    <!-- <script>
+        $(document).ready(function () {
+            $.ajax({
+                url: "http://127.0.0.1:8080/demo/all"
+            }).then(function (data) {
+                $('.greeting-id').append(data.id);
+                $('.greeting-title').append(data.title);
+                $('.greeting-author').append(data.author);
+                $('.greeting-isbn').append(data.isbn);
+                $('.greeting-publisher').append(data.publisher);
+            });
+        });
+    </script> -->
+
 </head>
 
 <body>
+
     <h1>view data</h1>
 
     <div class="select_id">
-        <form class="form-inline" action="#">
+        <form class="form-inline">
             <div class="form-group">
                 <label for="inputID">ID: </label>
-                <input type="text" class="form-control" id="id" placeholder="search with id">
+                <input type="text" class="form-control" id="id-input">
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-default">search</button>
         </form>
     </div>
 
-    <div class="list">
+    <div class="searched-id-list">
+        <label for="searched-id-list">Books Information Searched By ID <strong>( HTTP POST )</strong></label>
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>Firstname</th>
-                    <th>Lastname</th>
-                    <th>Email</th>
+                    <th>ID</th>
+                    <th>title</th>
+                    <th>author</th>
+                    <th>isbn</th>
+                    <th>publisher</th>
+                    <th>publication_year</th>
+                    <th>last_modified_date</th>
+                    <th>created_date</th>
+                    <th>created_at</th>
+                    <th>updated_at</th>
+
                 </tr>
             </thead>
 
-            <tbody>
-                <tr>
-                    <td>John</td>
-                    <td>Doe</td>
-                    <td>john@example.com</td>
-                </tr>
-                <tr>
-                    <td>Mary</td>
-                    <td>Moe</td>
-                    <td>mary@example.com</td>
-                </tr>
-                <tr>
-                    <td>July</td>
-                    <td>Dooley</td>
-                    <td>july@example.com</td>
-                </tr>
+            <tbody class="searched-id-table-body">
+                <!-- <tr>
+                    <td class="book-id"></td>
+                    <td class="book-title"></td>
+                    <td class="book-author"></td>
+                    <td class="book-isbn"></td>
+                    <td class="book-publisher"></td>
+                </tr> -->
+
             </tbody>
         </table>
 
     </div>
 
+    <br><br>
+
+    <div class="list">
+        <label for="list">Get All Books Information <strong>( HTTP GET )</strong></label>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>title</th>
+                    <th>author</th>
+                    <th>isbn</th>
+                    <th>publisher</th>
+                    <th>publication_year</th>
+                    <th>last_modified_date</th>
+                    <th>created_date</th>
+                    <th>created_at</th>
+                    <th>updated_at</th>
+                </tr>
+            </thead>
+
+            <tbody class="table-body">
+
+            </tbody>
+        </table>
+
+    </div>
+
+    <!-- <div>
+        <p class="greeting-id">The id is </p>
+        <p class="greeting-title">The content is </p>
+        <p class="greeting-author">The title is </p>
+        <p class="greeting-isbn">The isbn is </p>
+        <p class="greeting-publisher">The publisher is </p>
+    </div> -->
+
+    <!-- <script type="text/javascript">
+        $(function () {
+
+            $("#myDataTalbe").DataTable({
+                searching: false, //關閉filter功能
+                columnDefs: [{
+                    targets: [3],
+                    orderable: false,
+                }]
+            });
+        });
+    </script> -->
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-    </script>
+        </script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-    </script>
+        </script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" />
+
 </body>
 
 </html>
